--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ title: Peter Farley
 email:
 description: #>- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://farlepet.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.pfarley.dev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
-github_username:  farlepet
+github_username: farlepet
 owner: Peter Farley
 
 # Build settings
