Use return with 307 rather than rewrite

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
     server {
         listen 80;
 
-        rewrite ^/(.*)$ http://blog.pfarley.dev redirect;
+        return 307 https://blog.pfarley.dev$request_uri;
     }
     server {
         listen 443 ssl;
@@ -41,7 +41,7 @@ http {
         ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
         ssl_certificate_key /opt/ssl/blog.pfarley.dev/cert.key;
 
-        rewrite ^/(.*)$ https://blog.pfarley.dev redirect;
+        return 307 https://blog.pfarley.dev$request_uri;
     }
 
     server {
