--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                      '"$http_user_agent" "$http_x_forwarded_for" "$http3"';
 
     access_log  /var/log/nginx/access.log  main;
 
@@ -25,6 +25,14 @@ http {
     #tcp_nopush     on;
 
     keepalive_timeout  65;
+
+    http2 on;
+
+    quic_retry on;
+    quic_gso on;
+
+    # Since this is just serving static pages, don't care about replay attacks
+    ssl_early_data on;
 
     #gzip  on;
 
@@ -36,6 +44,7 @@ http {
         return 307 https://blog.pfarley.dev$request_uri;
     }
     server {
+        listen 443 quic reuseport;
         listen 443 ssl;
 
         ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
@@ -65,6 +74,7 @@ http {
     }
 
     server {
+        listen 443 quic;
         listen 443 ssl;
         server_name blog.pfarley.dev;
 
@@ -77,6 +87,9 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
+
+            # Let client know about HTTP/3 support
+            add_header Alt-Svc 'h3=":443"';
         }
     }
 
