Use lets encrypt filenames for certificates
Also fixes build issue

--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,10 @@ http {
     server {
         listen 80;
 
+        location /.well-known/acme-challenge/ {
+            root /opt/certbot;
+        }
+
         return 307 https://blog.pfarley.dev$request_uri;
     }
     server {
@@ -48,7 +52,7 @@ http {
         listen 443 ssl;
 
         ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
-        ssl_certificate_key /opt/ssl/blog.pfarley.dev/cert.key;
+        ssl_certificate_key /opt/ssl/blog.pfarley.dev/privkey.pem;
 
         return 307 https://blog.pfarley.dev$request_uri;
     }
@@ -57,13 +61,13 @@ http {
         listen 80;
         server_name blog.pfarley.dev;
 
+        location /.well-known/acme-challenge/ {
+            root /opt/certbot;
+        }
+
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
-        }
-
-        location /.well-known/acme-challenge/ {
-            root /opt/certbot;
         }
 
         error_page 404 /usr/share/nginx/html/404.html;
@@ -79,7 +83,7 @@ http {
         server_name blog.pfarley.dev;
 
         ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
-        ssl_certificate_key /opt/ssl/blog.pfarley.dev/cert.key;
+        ssl_certificate_key /opt/ssl/blog.pfarley.dev/privkey.pem;
 
         ssl_session_cache   shared:SSL:1m;
         ssl_session_timeout 5m;
