Fix nginx config for certbot
Also added script to start blog and certbot containers

--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
     server {
         listen 80;
 
-        location /.well-known/acme-challenge/ {
+        location ^~ /.well-known/acme-challenge/ {
             root /opt/certbot;
         }
 
@@ -51,8 +51,12 @@ http {
         listen 443 quic reuseport;
         listen 443 ssl;
 
-        ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
-        ssl_certificate_key /opt/ssl/blog.pfarley.dev/privkey.pem;
+        ssl_certificate     /opt/letsencrypt/live/blog.pfarley.dev/cert.pem;
+        ssl_certificate_key /opt/letsencrypt/live/blog.pfarley.dev/privkey.pem;
+
+        location ^~ /.well-known/acme-challenge/ {
+            root /opt/certbot;
+        }
 
         return 307 https://blog.pfarley.dev$request_uri;
     }
@@ -61,7 +65,7 @@ http {
         listen 80;
         server_name blog.pfarley.dev;
 
-        location /.well-known/acme-challenge/ {
+        location ^~ /.well-known/acme-challenge/ {
             root /opt/certbot;
         }
 
@@ -82,11 +86,15 @@ http {
         listen 443 ssl;
         server_name blog.pfarley.dev;
 
-        ssl_certificate     /opt/ssl/blog.pfarley.dev/cert.pem;
-        ssl_certificate_key /opt/ssl/blog.pfarley.dev/privkey.pem;
+        ssl_certificate     /opt/letsencrypt/live/blog.pfarley.dev/cert.pem;
+        ssl_certificate_key /opt/letsencrypt/live/blog.pfarley.dev/privkey.pem;
 
         ssl_session_cache   shared:SSL:1m;
         ssl_session_timeout 5m;
+
+        location ^~ /.well-known/acme-challenge/ {
+            root /opt/certbot;
+        }
 
         location / {
             root /usr/share/nginx/html;
