Remove unused redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     log_format  main  '$http_x_forwarded_for - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$host"';
+                      '"$http_user_agent"';
 
     access_log  /var/log/nginx/access.log  main;
 
@@ -32,7 +32,6 @@ http {
 
     server {
         listen 80;
-        server_name blog.pfarley.dev blog.staging.pfarley.dev;
 
         location / {
             root /usr/share/nginx/html;
@@ -44,12 +43,6 @@ http {
         location = /50x.html {
             root /usr/share/nginx/html;
         }
-    }
-
-    server {
-        listen 80;
-
-        return 307 https://blog.pfarley.dev$request_uri;
     }
 
     include /etc/nginx/conf.d/*.conf;
