--- a/nginx.conf
+++ b/nginx.conf
@@ -38,9 +38,8 @@ http {
             index index.html index.htm;
         }
 
-        error_page 404 /usr/share/nginx/html/404.html;
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
+        error_page 404 /404.html;
+        location = /404.html {
             root /usr/share/nginx/html;
         }
     }
