--- a/.forgejo/workflows/builder.yaml
+++ b/.forgejo/workflows/builder.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Login to Registry
         uses: docker/login-action@v3
         with:
-          registry: https://git.int.pfarley.dev
+          registry: https://git.pfarley.dev
           username: ${{ forge.actor }}
           password: ${{ secrets.PACKAGE_REPO_KEY }}
       - name: Build and Push - ${{ env.BRANCH_NAME }}
@@ -45,5 +45,5 @@ jobs:
         with:
           file: docker/blog-builder/Dockerfile
           push: true
-          tags: git.int.pfarley.dev/pfarley/blog-builder:${{ steps.get_tag_name.outputs.latest_tag }}
+          tags: git.pfarley.dev/pfarley/blog-builder:${{ steps.get_tag_name.outputs.latest_tag }}
 
